--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "websocket"
   ],
   "dependencies": {
-    "xstream": "^10.7.0"
+    "xstream": "^10.7.0",
+    "@cycle/run": "^3.1.0"
   },
   "devDependencies": {
-    "@cycle/run": "^3.1.0",
     "babel-cli": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
@@ -26,7 +26,8 @@
     "babel-register": "^6.24.1",
     "body-parser": "^1.17.2",
     "lodash": "^4.17.4",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "ws": "^3.0.0"
   },
   "author": "Pierre Chabiland",
   "license": "MIT"
