--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cycle-node-ws",
+  "name": "cycle-ws",
   "version": "1.0.0",
-  "description": "A Node Websocket driver for Cycle.js",
+  "description": "Websocket drivers for Cycle.js",
   "main": "dist/index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha --require babel-register -w",
+    "test": "./node_modules/mocha/bin/mocha --require babel-register",
     "build": "babel src -d dist",
     "watch": "babel src -d dist -w"
   },
