--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --require babel-register",
+    "test:ws": "./node_modules/mocha/bin/mocha --require babel-register ./test/ws.spec.js",
+    "test:io": "./node_modules/mocha/bin/mocha --require babel-register ./test/io.spec.js",
     "build": "babel src -d dist",
     "watch": "babel src -d dist -w",
     "pkg": "npm run build && npm publish"
@@ -20,8 +22,8 @@
     "websocket"
   ],
   "dependencies": {
-    "xstream": "^10.7.0",
-    "@cycle/run": "^3.1.0"
+    "@cycle/run": "^3.1.0",
+    "xstream": "^10.7.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -32,6 +34,8 @@
     "body-parser": "^1.17.2",
     "lodash": "^4.17.4",
     "mocha": "^3.4.2",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "ws": "^3.0.0"
   },
   "author": "Pierre Chabiland",
