--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "cycle-ws",
-  "version": "1.1.3",
-  "description": "Websocket drivers for Cycle.js",
+  "name": "cycle-net",
+  "version": "2.0.0",
+  "description": "Net (Websocket/Socket.io/HTTP(S)) drivers for Cycle.js",
   "main": "dist/index.js",
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha --require babel-register",
